--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -20,91 +20,80 @@
  </form>
 
 
-
- <body>
-  <nav class="mainnav">
-    <div class="inside">
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Game Servers</a></li>
-        <li><a href="#">Server Options</a></li>
-        <li><a href="#">Types of Servers</a></li>
-        <li><a href="#">Customers</a></li>
-        <li><a href="#">Support</a></li>
-        <li><a href="#">About Us</a></li>
-      </ul>
-  
-    </div>
-  </nav>
-  
-        <h1>BBP Servers</h1>
-        <p>BBP Servers offers dedicated servers for a variety of games</p>
-  
-        
-        <section class="server1">
-          <h2>Game Servers</h2>
-          <h3>We have Multiplayer Servers for Games</h3>
-          <ul>
-            <li>Over 100+ games</li>
-            <li>Reasonable prices</li>
-            <li>Maximum player slots</li>
-            <p><img srcset="images/servers3.png" alt=""></p>
-          </ul>
-        </section>
-        <section class="server2">
-          <h2>Server Options</h2>
-          <h3>Customize your Server</h3>
-          <ul>
-            <li>If applicable, configuration of game server</li>
-            <li>Adjustable Player count</li>
-            <li>Server protection</li>
-            <p><img src="images/servers2.jpg" alt=""></p>
-          </ul>
-        </section>
-        <section class="server3">
-          <h2>Types of Servers</h2>
-          <h3>We have different kinds of servers that suit your needs</h3>
-          <ul>
-            <li>Mechanical, Cloud, etc</li>
-            <li>Best hardware</li>
-            <li>Fast speeds</li>
-            <p><img src="images/servers1.jpg" alt=""></p>
-          </ul>
-        </section>
-        <section class="server4">
-          <h2>Customer Reviews</h2>
-          <h3>Here's what the community has been saying about us!</h3>
-          <ul>
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque labore voluptas maiores, enim vero veniam libero maxime perferendis doloribus adipisci impedit, inventore facere exercitationem, ipsa commodi quos praesentium quo. Laudantium!</p>
-          </ul>
-        </section>
-        <section class="server5">
-          <h2>Game Collection</h2>
-          <h3>So many different games that you can host!</h3>
-          <ul>
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque labore voluptas maiores, enim vero veniam libero maxime perferendis doloribus adipisci impedit, inventore facere exercitationem, ipsa commodi quos praesentium quo. Laudantium!</p>
-          </ul>
-        </section>
-        <section class="server6">
-          <h2>Global Coverage</h2>
-          <h3>We have servers across the globe</h3>
-          <ul>
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque labore voluptas maiores, enim vero veniam libero maxime perferendis doloribus adipisci impedit, inventore facere exercitationem, ipsa commodi quos praesentium quo. Laudantium!</p>
-          </ul>
-        </section>
-      
-      <footer>
-        <nav>
+<body>
+  <div id="wrapper">
+    <div id="header">
+      <h1>BPP Servers</h1>
+      <div id="nav">
         <ul>
-          <li><a href="#">Site Map</a></li>
-          <li><a href="#">About us</a></li>
-          <li><a href="#">Support</a></li>
+          <li class="active"><a href="index.html">Home</a></li>
+          <li class="navItem"><a href="gameservers.html">Game Servers</a></li>
+          <li class="navItem"><a href="serveroptions.html">Server Options</a></li>
+          <li class="navItem"><a href="typesofservers.html">Types of Servers</a></li>
+          <li class="navItem"><a href="customers.html">Customers</a></li>
+          <li class="navItem"><a href="support.html">Support</a></li>
+          <li class="navItem"><a href="about.html">About Us</a></li>
         </ul>
-          <a href="#">Go To Top</a>
-        </nav>
-      </footer>
-          <small>&copy;2022 BBP Servers</small>
+      </div>
+    </div>
+    <div id="content">
+      <div id="feature">
+        <p style="color: rgb(0, 0, 0);font-size: 160%;
+        font-family: 'Courier New', Courier, monospace; 
+        margin: 100px;
+        width: 350px;
+        height: 10px;
+        position: absolute;
+        left: 35%;"
+        >WELCOME TO BPP Servers</p>
+      </div>
+      <div class="article column1">
+        <div style="text-align:center;">
+          <div class="overlay"><li class="navItem"><a href="gameservers.html">Game Servers</a></li>
+            <p style="color:rgb(255, 0, 0);">We have servers for various multiplayer games</p>
+        </div>
+      </div>
+      </div>
+      <div class="article column2">
+        <div style="text-align:center;">
+          <div class="overlay"><li class="navItem"><a href="serveroptions.html">Server Options</a></li>
+            <p style="color:rgb(255, 7, 7);">Customize your server</p>
+        </div>
+      </div>
+      </div>
+      <div class="article column3">
+        <div style="text-align:center;">
+          <div class="overlay"><li class="navItem"><a href="typesofservers.html">Types of Servers</a></li>
+            <p style="color:rgb(255, 5, 5);">Types of Servers</p>
+        </div>
+      </div>
+      </div>
+      <div class="article column4">
+        <div style="text-align:center;">
+          <div class="overlay"><li class="navItem"><a href="customers.html">Customers</a></li>
+            <p style="color:rgb(255, 0, 0);">Customer Page</p>
+        </div>
+      </div>
+      </div>
+      <div class="article column5">
+        <div style="text-align:center;">
+          <div class="overlay"><li class="navItem"><a href="support.html">Support</a></li>
+            <p style="color:rgb(255, 0, 0);">Need server help?</p>
+        </div>
+      </div>
+      </div>
+      <div class="article column6">
+        <div style="text-align:center;">
+          <div class="overlay"><li class="navItem"><a href="about.html">About Us</a></li>
+            <p style="color:rgb(255, 0, 0);">Learn more about us</p>
+        </div>
+      </div>
+      </div>
+    </div>
+    <div id="footer">
+      <p>&copy; Copyright 2022</p>
     </div>
   </div>
 </body>
+
 </html>
