--- a/index.html
+++ b/index.html
@@ -38,52 +38,47 @@
     </div>
     <div id="content">
       <div id="feature">
-        <p style="color: rgb(0, 0, 0);font-size: 160%;
-        font-family: 'Courier New', Courier, monospace; 
-        margin: 100px;
-        width: 350px;
-        height: 10px;
-        position: absolute;
-        left: 35%;"
+        <p style="color: rgb(247, 120, 120);font-size: 160%;
+        font-family: 'Courier New', Courier, monospace;"
         >WELCOME TO BPP Servers</p>
       </div>
       <div class="article column1">
-        <div style="text-align:center;">
+        <div>
           <div class="overlay"><li class="navItem"><a href="gameservers.html">Game Servers</a></li>
             <p style="color:rgb(255, 0, 0);">We have servers for various multiplayer games</p>
         </div>
       </div>
       </div>
       <div class="article column2">
-        <div style="text-align:center;">
+        <div>
           <div class="overlay"><li class="navItem"><a href="serveroptions.html">Server Options</a></li>
             <p style="color:rgb(255, 7, 7);">Customize your server</p>
         </div>
       </div>
       </div>
       <div class="article column3">
-        <div style="text-align:center;">
+        <div>
           <div class="overlay"><li class="navItem"><a href="typesofservers.html">Types of Servers</a></li>
             <p style="color:rgb(255, 5, 5);">Types of Servers</p>
         </div>
       </div>
       </div>
       <div class="article column4">
-        <div style="text-align:center;">
+        <div>
           <div class="overlay"><li class="navItem"><a href="customers.html">Customers</a></li>
             <p style="color:rgb(255, 0, 0);">Customer Page</p>
         </div>
       </div>
       </div>
       <div class="article column5">
-        <div style="text-align:center;">
+        <div>
           <div class="overlay"><li class="navItem"><a href="support.html">Support</a></li>
             <p style="color:rgb(255, 0, 0);">Need server help?</p>
         </div>
       </div>
       </div>
-      <div class="article column6">
-        <div style="text-align:center;">
+      <ddiv class="article column6">
+        <div>
           <div class="overlay"><li class="navItem"><a href="about.html">About Us</a></li>
             <p style="color:rgb(255, 0, 0);">Learn more about us</p>
         </div>
