--- a/support.html
+++ b/support.html
@@ -40,12 +40,7 @@
     <div id="content">
       <div id="feature4">
         <p style="color: rgb(253, 0, 0);font-size: 160%;
-        font-family: 'Courier New', Courier, monospace; 
-        margin: 100px;
-        width: 350px;
-        height: 10px;
-        position: absolute;
-        left: 35%;"
+        font-family: 'Courier New', Courier, monospace;"
         >Support</p>
         <p style="position: absolute;
         height: 10px;
