--- a/customers.html
+++ b/customers.html
@@ -39,20 +39,15 @@
     <div id="content">
       <div id="feature3">
         <p style="color: rgb(253, 0, 0);font-size: 160%;
-        font-family: 'Courier New', Courier, monospace; 
-        margin: 100px;
-        width: 350px;
-        height: 10px;
-        top: 150px;
-        position: absolute;
-        left: 35%;"
+        font-family: 'Courier New', Courier, monospace;"
         >CUSTOMERS</p>
         <p style="position: absolute;
         height: 10px;
         width: 350px;
         bottom: 50%;
         left: 40%;"
-        >Check in here and stuff!<button type="submit">Login</button><button type="submit">Register</button></p>
+        >Check in here and stuff!
+        <button type="submit">Login</button><button type="submit">Register</button></p>
       </div>
     <div id="footer">
       <p>&copy; Copyright 2022</p>
