--- a/serveroptions.html
+++ b/serveroptions.html
@@ -39,13 +39,7 @@
     <div id="content">
       <div id="feature6">
         <p style="color: rgb(253, 0, 0);font-size: 160%;
-        font-family: 'Courier New', Courier, monospace; 
-        margin: 100px;
-        width: 350px;
-        height: 10px;
-        top: 150px;
-        position: absolute;
-        left: 35%;"
+        font-family: 'Courier New', Courier, monospace;"
         >Server Options</p>
         <p style="position: absolute;
         height: 10px;
