--- a/typesofservers.html
+++ b/typesofservers.html
@@ -40,13 +40,7 @@
     <div id="content">
       <div id="feature7">
         <p style="color: rgb(253, 0, 0);font-size: 160%;
-        font-family: 'Courier New', Courier, monospace; 
-        margin: 100px;
-        width: 350px;
-        height: 10px;
-        top: 100px;
-        position: absolute;
-        left: 35%;"
+        font-family: 'Courier New', Courier, monospace;"
         >Types of Servers</p>
         <p style="color: rgb(245, 19, 19);
         position: absolute;
