--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
       <div class="article column3">
         <div>
-          <div class="overlay"><li class="navItem"><a href="typesofservers.html">Types of Servers</a></li>
+          <div class="overlay"><li class="navItem"><a href="typesofservers.html">Server Types</a></li>
             <p style="color:rgb(255, 5, 5);">Types of Servers</p>
         </div>
       </div>
